--- a/tests/d2_naca2412/CMakeLists.txt
+++ b/tests/d2_naca2412/CMakeLists.txt
@@ -5,7 +5,7 @@ SET(_shared_input_dir  ${CMAKE_CURRENT_SOURCE_DIR})
 SET(_shared_input_file_list 2412.msh)
 
 ###
-SET (_input_file_list input.prm.2412)
+SET (_input_file_list input.prm)
 
 ###
 SET (_output_file screen.log)
@@ -13,7 +13,7 @@ SET (_comparison_file screen.log.reference)
 
 ###
 # SET (_exec_run ${CMAKE_BINARY_DIR}/bin/${PRJ_NAME})
-SET (_para_run input.prm.2412 2>&1 > screen.log)
+SET (_para_run ${_input_file_list} 2>&1 > screen.log)
 
 ###
 GET_FILENAME_COMPONENT(_current_dir_name ${CMAKE_CURRENT_SOURCE_DIR} NAME)
