--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -7,7 +7,7 @@ ADD_EXECUTABLE(${PRJ_NAME}
   )
 
 SET_PROPERTY(TARGET ${PRJ_NAME}
-  PROPERTY RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin
+  APPEND PROPERTY RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin
   )
 
 DEAL_II_SETUP_TARGET(${PRJ_NAME})
