--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -109,5 +109,5 @@ IF(NOT USAGE_PRINTED)
   INCLUDE(${CMAKE_BINARY_DIR}${CMAKE_FILES_DIRECTORY}/print_usage.cmake)
   SET(USAGE_PRINTED TRUE CACHE INTERNAL "")
 ELSE()
-  MESSAGE(STATUS "Run  ${_make_command} info  to print a detailed help message")
+  MESSAGE(STATUS "\n\nRun  ${_make_command} info  to print a detailed help message.\n\n")
 ENDIF()
