set time out limit for tests with default value 5 hours

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -36,4 +36,6 @@ ENDIF()
 
 SET (_exec_run ${CMAKE_BINARY_DIR}/bin/${PRJ_NAME})
 
+SET (_time_out_time 18000)
+
 PICKUP_ALL_SUBDIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
