move time stepping parameters to a separated struct

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -11,6 +11,7 @@ ADD_EXECUTABLE(${PRJ_NAME}
   NSolver_integrate_force.cpp
   PhysicalParameters.cpp
   EquationComponents.cpp
+  TimeSteppingParameters.cpp
   )
 
 SET_PROPERTY(TARGET ${PRJ_NAME}
