Determin initialization method from run time paramter; move initialization to a funtion.

--- a/source/solver/CMakeLists.txt
+++ b/source/solver/CMakeLists.txt
@@ -2,6 +2,7 @@
 SET (_lib_source_file_list "")
 LIST(APPEND _lib_source_file_list NSolver.cpp)
 LIST(APPEND _lib_source_file_list integrate_force.cpp)
+LIST(APPEND _lib_source_file_list initialize.cpp)
 
 
 GET_FILENAME_COMPONENT(__lib_name ${CMAKE_CURRENT_SOURCE_DIR} NAME)
