add lib list twice to address the gcc link order issue

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -13,6 +13,13 @@ LIST(APPEND _source_file_list EquationComponents.cpp)
 
 # Pick up all subdirectories for static libraries
 LIST_ALL_SUBDIRECTORIES (_static_lib_list ${CMAKE_CURRENT_SOURCE_DIR})
+# Instead add all subdirectories automatically via the above command,
+# we have to do this in proper order manually. Because solver is depending on
+# linearVelocityPotential and gcc cares the order.
+#LIST(APPEND _static_lib_list solver)
+#LIST(APPEND _static_lib_list Parameters)
+#LIST(APPEND _static_lib_list linearVelocityPotential)
+
 FOREACH(__sub_dir ${_static_lib_list})
   ADD_SUBDIRECTORY(${__sub_dir})
 ENDFOREACH()
@@ -22,7 +29,11 @@ UNSET(__sub_dir)
 ADD_EXECUTABLE(${PRJ_NAME}
   ${_source_file_list})
 
+# gcc only search for dependency in one direction during linking,
+# so we add the library list twice to make sure gcc can always
+# find what it want.
 TARGET_LINK_LIBRARIES(${PRJ_NAME} 
+  ${_static_lib_list}
   ${_static_lib_list})
 
 SET_PROPERTY(TARGET ${PRJ_NAME}
