--- a/source/Parameters/CMakeLists.txt
+++ b/source/Parameters/CMakeLists.txt
@@ -1,9 +1,6 @@
 
 SET (_lib_source_file_list "")
-LIST(APPEND _lib_source_file_list AllParameters.cpp)
-LIST(APPEND _lib_source_file_list FEParameters.cpp)
-LIST(APPEND _lib_source_file_list PhysicalParameters.cpp)
-LIST(APPEND _lib_source_file_list TimeSteppingParameters.cpp)
+FILE(GLOB _lib_source_file_list *.cpp)
 
 GET_FILENAME_COMPONENT(__lib_name ${CMAKE_CURRENT_SOURCE_DIR} NAME)
 ADD_LIBRARY (${__lib_name} STATIC ${_lib_source_file_list})
