--- a/source/linearVelocityPotential/CMakeLists.txt
+++ b/source/linearVelocityPotential/CMakeLists.txt
@@ -1,15 +1,6 @@
 
 SET (_lib_source_file_list "")
-LIST(APPEND _lib_source_file_list assemble.cpp)
-LIST(APPEND _lib_source_file_list compute.cpp)
-LIST(APPEND _lib_source_file_list linearVelocityPotential.cpp)
-LIST(APPEND _lib_source_file_list linearVelocityPotential_Postprocessor.cpp)
-LIST(APPEND _lib_source_file_list output_result.cpp)
-LIST(APPEND _lib_source_file_list setup_system.cpp)
-LIST(APPEND _lib_source_file_list solve.cpp)
-LIST(APPEND _lib_source_file_list transfer_solution.cpp)
-
-
+FILE(GLOB _lib_source_file_list *.cpp)
 
 GET_FILENAME_COMPONENT(__lib_name ${CMAKE_CURRENT_SOURCE_DIR} NAME)
 ADD_LIBRARY (${__lib_name} STATIC ${_lib_source_file_list})
