--- a/source/solver/CMakeLists.txt
+++ b/source/solver/CMakeLists.txt
@@ -1,9 +1,6 @@
 
 SET (_lib_source_file_list "")
-LIST(APPEND _lib_source_file_list NSolver.cpp)
-LIST(APPEND _lib_source_file_list integrate_force.cpp)
-LIST(APPEND _lib_source_file_list initialize.cpp)
-
+FILE(GLOB _lib_source_file_list *.cpp)
 
 GET_FILENAME_COMPONENT(__lib_name ${CMAKE_CURRENT_SOURCE_DIR} NAME)
 ADD_LIBRARY (${__lib_name} STATIC ${_lib_source_file_list})
