fix make info's out put on CMAKE_BUILD_TYPE

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -91,7 +91,9 @@ ADD_CUSTOM_TARGET(reset
 
 
 ADD_CUSTOM_TARGET(info
-  COMMAND ${CMAKE_COMMAND} -P ${CMAKE_BINARY_DIR}${CMAKE_FILES_DIRECTORY}/print_usage.cmake
+  COMMAND ${CMAKE_COMMAND}
+    -D CMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}
+    -P ${CMAKE_BINARY_DIR}${CMAKE_FILES_DIRECTORY}/print_usage.cmake
   )
 
 ENABLE_TESTING()
@@ -107,7 +109,7 @@ ELSE()
 ENDIF()
 
 IF(NOT USAGE_PRINTED)
-  CONFIGURE_FILE(${CMAKE_SOURCE_DIR}/utilities/cmake/print_usage.cmake.in  ${CMAKE_BINARY_DIR}${CMAKE_FILES_DIRECTORY}/print_usage.cmake ESCAPE_QUOTES)
+  CONFIGURE_FILE(${CMAKE_SOURCE_DIR}/utilities/cmake/print_usage.cmake.in  ${CMAKE_BINARY_DIR}${CMAKE_FILES_DIRECTORY}/print_usage.cmake ESCAPE_QUOTES @ONLY)
   INCLUDE(${CMAKE_BINARY_DIR}${CMAKE_FILES_DIRECTORY}/print_usage.cmake)
   SET(USAGE_PRINTED TRUE CACHE INTERNAL "")
 ELSE()
