--- a/utilities/cmake/print_usage.cmake.in
+++ b/utilities/cmake/print_usage.cmake.in
@@ -1,23 +1,23 @@
 MESSAGE(
 "###
 #
-#  Project  ${PRJ_NAME}  set up with  ${DEAL_II_PACKAGE_NAME}-${DEAL_II_PACKAGE_VERSION}  found at
-#      ${DEAL_II_PATH}
+#  Project  @PRJ_NAME@  set up with  @DEAL_II_PACKAGE_NAME@-@DEAL_II_PACKAGE_VERSION@  found at
+#      @DEAL_II_PATH@
 #
 #  CMAKE_BUILD_TYPE:          ${CMAKE_BUILD_TYPE}
 #
 #  You can now run
-#       ${_make_command}                - to compile and link the program
+#       @_make_command@                - to compile and link the program
 #
-#       ${_make_command} debug          - to switch the build type to 'Debug'
-#       ${_make_command} release        - to switch the build type to 'Release'
+#       @_make_command@ debug          - to switch the build type to 'Debug'
+#       @_make_command@ release        - to switch the build type to 'Release'
 #
-#       ${_make_command} distclean      - to clean the build directory
+#       @_make_command@ distclean      - to clean the build directory
 #                               This will remove directory bin, source and tests.
 #                               Use with caution!
-#       ${_make_command} reset          - to regenerate cmake files after a distclean
+#       @_make_command@ reset          - to regenerate cmake files after a distclean
 #
-#       ${_make_command} info           - to view this message again
+#       @_make_command@ info           - to view this message again
 #
 #  Have a nice day!
 #
