--- a/tests/module_EulerEquations/CMakeLists.txt
+++ b/tests/module_EulerEquations/CMakeLists.txt
@@ -1,12 +1,3 @@
-
-# Different test cases may share some input files, for example grid file.
-# Just keep one copy of these files.
-SET(_shared_input_dir  ${CMAKE_CURRENT_SOURCE_DIR})
-SET(_shared_input_file_list )
-
-###
-SET (_src_file_list "main.cc")
-
 ###
 SET (_input_file_list "input.prm")
 
@@ -14,16 +5,7 @@ SET (_input_file_list "input.prm")
 SET (_output_file all.out)
 SET (_comparison_file all.out.reference)
 
-###
-# SET (_exec_run ${CMAKE_BINARY_DIR}/bin/${PRJ_NAME})
-SET (_para_run ${_input_file_list} > screen.log 2>&1)
-
 SET (_para_diff  -a 1e-8 -r 1e-8 -s  "' \\t\\n:<>=,\(\)\;'")
 
-###
-GET_FILENAME_COMPONENT(_current_dir_name ${CMAKE_CURRENT_SOURCE_DIR} NAME)
-SET(_test_name_prefix ${_current_dir_name})
-UNSET(_current_dir_name)
-
-PICKUP_ALL_SUBDIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
+SETUP_TEST_CATEGORY()
 
