add target clean to make info output

--- a/utilities/cmake/print_usage.cmake.in
+++ b/utilities/cmake/print_usage.cmake.in
@@ -12,6 +12,7 @@ MESSAGE(
 #       @_make_command@ debug              - to switch the build type to 'Debug'
 #       @_make_command@ release            - to switch the build type to 'Release'
 #
+#       @_make_command@ clean              - to clean all exe, obj, and ctest files
 #       @_make_command@ distclean          - to clean the build directory
 #                                    This will remove directory bin, source and tests.
 #                                    Use with caution!
