--- a/tests/module_MDFILU/CMakeLists.txt
+++ b/tests/module_MDFILU/CMakeLists.txt
@@ -1,3 +1,4 @@
 ###
 SET (_input_file_list "sparse_matrix.dat")
+LIST (APPEND _additional_clean_up_files A.out LU.out apply.out  matrix.out)
 SETUP_TEST_CATEGORY()
