--- a/tests/d2_slide/case001003/CMakeLists.txt
+++ b/tests/d2_slide/case001003/CMakeLists.txt
@@ -25,7 +25,7 @@ SET (_test_src_directory ${CMAKE_CURRENT_SOURCE_DIR})
 # SET (_comparison_file screen.log.reference)
 
 SET (_exec_run  ${_exec_mpi})
-SET (_para_run  -n 5 ${CMAKE_BINARY_DIR}/bin/${PRJ_NAME} input.prm > screen.log 2>&1)
+SET (_para_run  -n 5 ${CMAKE_BINARY_DIR}/bin/${PRJ_NAME} input.prm)
 
 
 # _test_name_prefix is setted in the parent CMakeList.txt.
