clean up a local variable in CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -132,3 +132,4 @@ IF(NOT USAGE_PRINTED)
 ELSE()
   MESSAGE(STATUS "\n\nRun  ${_make_command} info  to print a detailed help message.\n\n")
 ENDIF()
+UNSET(_make_command)
